--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
+  google_fonts: ^6.1.0
+  get: ^4.6.6
+  english_words: ^4.0.0
   provider: ^6.1.2
-  http: ^1.2.0
-  shared_preferences: ^2.2.3
+  sqflite: ^2.3.2
+  http: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +68,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - jsons/quotes.json
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
